--- a/quest-generator/Dockerfile
+++ b/quest-generator/Dockerfile
@@ -1,19 +1,16 @@
-# Используем официальный образ python:3.10-slim
 FROM python:3.10-slim
 
-# Устанавливаем рабочую директорию /app
+RUN apt-get update && apt-get install -y build-essential cmake
+
 WORKDIR /app
 
-# Копируем requirements.txt и устанавливаем зависимости
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Копируем всё остальное содержимое проекта
 COPY . .
-# Устанавливаем переменную окружения для Flask
+
 ENV FLASK_APP=backend/app.py
-# Открываем порт 5000
+
 EXPOSE 5000
 
-# Запускаем Flask-приложение с хостом 0.0.0.0
 CMD ["flask", "run", "--host=0.0.0.0"]
