--- a/quest-generator/docker-compose.yml
+++ b/quest-generator/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   web:
     build: .
@@ -5,3 +7,6 @@ services:
       - "5001:5000"
     volumes:
       - ./backend:/app/backend
+      - ${LOCAL_MODEL_PATH}:/models/model.gguf
+    env_file:
+      - .env
