feat: обновить .gitignore и добавить .dockerignore для исключения ненужных файлов

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # - Project-specific files (validator.md, promt.txt)
 .env
 
+__pycache__
 __pycache__/
 *.pyc
 *.pyo
@@ -55,3 +56,6 @@ Thumbs.db
 validator.md
 
 promt.txt
+
+collector.py
+all_code.txt
