--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,8 +2,11 @@ version: '3.8'
 
 services:
   web:
-    build: .
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile
     ports:
       - "5001:5000"
     volumes:
-      - ./backend:/app/backend
+      - ../app:/app/app
+      - ../tests:/app/tests
