--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build:
@@ -8,5 +6,6 @@ services:
     ports:
       - "5001:5000"
     volumes:
-      - ../app:/app/app
+      - ../app:/app 
       - ../tests:/app/tests
+    # command: ["sleep", "3600"]
