--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.10-slim
 
+RUN python -m pip install --upgrade pip setuptools
+
 RUN apt-get update && apt-get install -y \
     build-essential \
     cmake \
