--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,5 +7,5 @@ services:
       - "5001:5000"
     volumes:
       - ../app:/app 
-      - ../tests:/app/tests
+      - ../tests:/tests
     # command: ["sleep", "3600"]
