feat: добавлен скрипт для управления файлами локальных моделей GGUF с возможностью копирования и перемещения

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,4 +8,6 @@ services:
     volumes:
       - ../app:/app 
       - ../tests:/tests
-    # command: ["sleep", "3600"]
+      - ../quest-generator/models:/models
+    environment:
+      - LOCAL_MODEL_PATH=/models
