Refactor project structure and enhance functionality
- Updated JavaScript code to improve UI interactions and file handling.
- Added conditional rendering for local LLM option in HTML templates.
- Removed obsolete Docker configuration files and scripts.
- Simplified dependency management in requirements.txt.
- Implemented new file management logic in run_desktop.py for local model handling.
- Enhanced verification script to streamline project checks and outputs.
- Created a new run_desktop.py script to launch the application with PyWebView.
- Removed legacy scripts and Docker setup to focus on a cleaner project structure.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Flask>=2.0
 groq>=0.4.0
 python-dotenv>=1.0.0
-gunicorn
 flake8
 pytest
 black
@@ -12,4 +11,4 @@ pip-audit
 pytest-cov
 openai
 google-generativeai
-llama-cpp-python
+pywebview
